--- a/mastermind/pom.xml
+++ b/mastermind/pom.xml
@@ -35,6 +35,11 @@
         <artifactId>spring-boot-starter-thymeleaf</artifactId>
         <version>4.0.0-M1</version>
       </dependency>
+      <dependency>
+          <groupId>org.json</groupId>
+          <artifactId>json</artifactId>
+          <version>20250517</version>
+      </dependency>
     </dependencies>
 
 
