--- a/mastermind/pom.xml
+++ b/mastermind/pom.xml
@@ -36,10 +36,21 @@
         <version>4.0.0-M1</version>
       </dependency>
       <dependency>
-          <groupId>org.json</groupId>
-          <artifactId>json</artifactId>
-          <version>20250517</version>
+        <groupId>org.json</groupId>
+        <artifactId>json</artifactId>
+        <version>20250517</version>
       </dependency>
+      <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-starter-gateway-server-webmvc</artifactId>
+        <version>5.0.0-M1</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-validation</artifactId>
+        <version>4.0.0-M1</version>
+      </dependency>
+      
     </dependencies>
 
 
