--- a/mastermind/pom.xml
+++ b/mastermind/pom.xml
@@ -50,7 +50,12 @@
         <artifactId>spring-boot-starter-validation</artifactId>
         <version>4.0.0-M1</version>
       </dependency>
-      
+      <dependency>
+          <groupId>org.projectlombok</groupId>
+          <artifactId>lombok</artifactId>
+          <version>1.18.38</version>
+      </dependency>
+
     </dependencies>
 
 
