--- a/mastermind/pom.xml
+++ b/mastermind/pom.xml
@@ -64,6 +64,21 @@
             <artifactId>spring-boot-starter-data-redis</artifactId>
             <version>4.0.0-M1</version>
       </dependency>
+      <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <scope>runtime</scope>
+      </dependency>
+      <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>test</scope>
+      </dependency>
+      <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+      </dependency>
+
     </dependencies>
 
 
